tests/fixtures/positive/naming/NonBooleanPropertyPrefixedWithIs.kt
package naming

class Example {
    val isName: String = "hello"
}
