tests/fixtures/negative/libraries/LibraryCodeMustSpecifyReturnType.kt
package test

fun calculate(): Int = 42

val greeting: String = "hello"
